# romea-core-localisation-gps

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  package.xml  romea_localisation_gps.repos  romea_localisation_gps.rosinstall  romea_localisation_gps_public.repos
cmake/: romea_core_localisation_gpsConfig.cmake.in  romea_localisation_gpsConfig.cmake.in
include/romea_core_localisation_gps/: CheckupGGAFix.hpp  CheckupHDTTrackAngle.hpp  CheckupRMCTrackAngle.hpp  LocalisationGPSPlugin.hpp
include/romea_gps_localisation_plugin/: CheckupGGAFix.hpp  gga_diagnostic2.hpp  gps_localisation_plugin.hpp  rmc_diagnostic2.hpp
include/romea_localisation_gps/: CheckupGGAFix.hpp  CheckupRMCTrackAngle.hpp  LocalisationGPSPlugin.hpp
src/: CheckupGGAFix.cpp  CheckupHDTTrackAngle.cpp  CheckupRMCTrackAngle.cpp  LocalisationGPSPlugin.cpp  gga_diagnostic2.cpp  gps_localisation_plugin.cpp  rmc_diagnostic2.cpp
test/: CMakeLists.txt  helper.hpp  test_dual_antenna_gps_plugin.cpp  test_gga_diagnostic.cpp  test_gps_plugin.cpp  test_hdt_diagnostic.cpp  test_rmc_diagnostic.cpp  test_single_antenna_gps_plugin.cpp
